// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            US
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            —
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <thead
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <th
            className="sc-chPdSV ljlDKB"
          >
            Code
          </th>
          <th
            className="sc-chPdSV ljlDKB"
          >
            Capital
          </th>
          <th
            className="sc-chPdSV ljlDKB"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            US
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY eeeueb"
          >
            —
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <thead
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <th
            className="sc-chPdSV ljlDKB"
          >
            #
          </th>
          <th
            className="sc-chPdSV ljlDKB"
          >
            Code
          </th>
          <th
            className="sc-chPdSV ljlDKB"
          >
            Capital
          </th>
          <th
            className="sc-chPdSV ljlDKB"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf kqVZgA"
          >
            1
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            US
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf kqVZgA"
          >
            2
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf kqVZgA"
          >
            3
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf kqVZgA"
          >
            4
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf kqVZgA"
          >
            5
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf kqVZgA"
          >
            6
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            —
          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kAzzGY eeeueb"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
